--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--
+	Copyright 2014 Git.Training
+	Adding changes before rebasing conflict
+-->
 <head>
 	<title>An Example Website  </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
