--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	some silly changes from master branch 
 -->
 <head>
-	<title>An heheh e Website  </title>
+	<title>An Example Website  </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just nothin' but trouble 
 		</p>
 	</main>
 	<footer class="container">
