mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2014 Git.Training
-	Adding changes before rebasing conflict
+	some silly changes from master branch 
 -->
 <head>
-	<title>An Example Website  </title>
+	<title>An heheh e Website  </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -22,7 +22,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Erin 2014</p>
 	</footer>
 </body>
 </html>
