local: this is a local commit

--- a/simple.html
+++ b/simple.html
@@ -22,7 +22,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Erin 2014</p>
+		<p>&copy; Erin 2014 Git.training </p>
 	</footer>
 </body>
 </html>
