Done with simple.html updates

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	
 -->
 <head>
-	<title>An Example Website  </title>
+	<title>An Updated Example Website  </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -19,6 +19,7 @@
 	<!-- Content Goes Here -->
 		<p>
 			Just nothin' but trouble 
+			Adding  more things 
 		</p>
 	</main>
 	<footer class="container">
