--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	
 -->
 <head>
-	<title>An Updated Example Website Updated again  </title>
+	<title>An Updated Example Website Updated again for tagging compare example   </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
